:ambulance: для кросбраузерности дабавил атрибут в pucture

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
               </div>
         </div>
         <picture class="banner__picture">
-          <source srcset="./public/bg.avif"/>
+          <source srcset="./public/bg.avif" type="image/avif"/>
           <img class="banner__bg" src="./public/bg.png" alt="background">
         </picture>
         <picture class="banner__picture">
-          <source srcset="./public/man-1.avif"/>
+          <source srcset="./public/man-1.avif" type="image/avif"/>
           <img class="banner__man-1" src="./public/man-1.png" alt="new man">
         </picture>
         <picture class="banner__picture">
-          <source srcset="./public/man-2.avif"/>
+          <source srcset="./public/man-2.avif" type="image/avif"/>
           <img class="banner__man-2" src="./public/man-2.png" alt="new man">
         </picture>
 
@@ -117,35 +117,35 @@
         <h2 class="new__title">Новые акнкеты на сайте:</h2>
         <div class="new__list">
           <picture class="new__picture">
-            <source srcset="./public/client1.avif"/>
+            <source srcset="./public/client1.avif" type="image/avif"/>
             <img class="new__image" src="./public/client1.png" alt="new client">
           </picture>
           <picture class="new__picture">
-            <source srcset="./public/client2.avif"/>
+            <source srcset="./public/client2.avif" type="image/avif"/>
             <img class="new__image" src="./public/client2.png" alt="new client">
           </picture>          <picture class="new__picture">
             <!-- подгружаем изображения только на заданном разрешении -->
-            <source srcset="./public/client3.avif" media="(min-width: 1200px)"/>
-            <source srcset="./public/client3.png" media="(min-width: 1200px)"/>
+            <source srcset="./public/client3.avif" media="(min-width: 1200px)" type="image/avif"/>
+            <source srcset="./public/client3.png" media="(min-width: 1200px)" type="image/avif"/>
             <!-- убираем дефолтный туть чтобы не грузить изображение постоянно -->
             <img class="new__image hiddeh-mobile" src="" alt="new client">
           </picture>          <picture class="new__picture">
-            <source srcset="./public/client4.avif"/>
+            <source srcset="./public/client4.avif" type="image/avif"/>
             <img class="new__image" src="./public/client4.png" alt="new client">
           </picture>          <picture class="new__picture">
-            <source srcset="./public/client5.avif"/>
+            <source srcset="./public/client5.avif" type="image/avif"/>
             <img class="new__image" src="./public/client5.png" alt="new client">
           </picture>          <picture class="new__picture">
-            <source srcset="./public/client6.avif"/>
+            <source srcset="./public/client6.avif" type="image/avif"/>
             <img class="new__image" src="./public/client6.png" alt="new client">
           </picture>        
           <picture class="new__picture">
-            <source srcset="./public/client7.avif" media="(min-width: 1200px)"/>
-            <source srcset="./public/client7.png" media="(min-width: 1200px)"/>
+            <source srcset="./public/client7.avif" media="(min-width: 1200px)" type="image/avif"/>
+            <source srcset="./public/client7.png" media="(min-width: 1200px)" type="image/avif"/>
             <img class="new__image hiddeh-mobile" src="" alt="new client">
           </picture>          
           <picture class="new__picture">
-            <source srcset="./public/client8.avif"/>
+            <source srcset="./public/client8.avif" type="image/avif"/>
             <img class="new__image" src="./public/client8.png" alt="new client">
           </picture>
       </div>
